--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.RFIDApp" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.RFIDApp" parent="Theme.MaterialComponents.Light.NoActionBar.Bridge">
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <item name="colorOnPrimary">@color/white</item>
         <item name="colorOnSecondary">@color/black</item>
@@ -8,6 +8,13 @@
         <item name="colorPrimaryVariant">@color/dApp_color</item>
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
+    </style>
+
+    <style name="ToolbarTitle">
+        <item name="fontFamily">@font/kaiseiopti_bold</item>
+        <item name="android:textSize">20sp</item>
+        <item name="lineHeight">28sp</item>
+        <item name="fontWeight">700</item>
     </style>
 
 </resources>
