--- a/app/src/main/res/drawable/ic_close.xml
+++ b/app/src/main/res/drawable/ic_close.xml
@@ -1,17 +1,24 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
-    android:viewportWidth="20"
-    android:viewportHeight="20">
+    android:viewportWidth="24"
+    android:viewportHeight="24">
   <path
-      android:pathData="M9.583,17.5C13.956,17.5 17.5,13.955 17.5,9.583C17.5,5.211 13.956,1.667 9.583,1.667C5.211,1.667 1.667,5.211 1.667,9.583C1.667,13.955 5.211,17.5 9.583,17.5Z"
+      android:pathData="M12,22C17.5,22 22,17.5 22,12C22,6.5 17.5,2 12,2C6.5,2 2,6.5 2,12C2,17.5 6.5,22 12,22Z"
       android:strokeLineJoin="round"
       android:strokeWidth="1.5"
       android:fillColor="#00000000"
       android:strokeColor="#7C7474"
       android:strokeLineCap="round"/>
   <path
-      android:pathData="M18.333,18.333L16.667,16.667"
+      android:pathData="M9.17,14.83L14.83,9.17"
+      android:strokeLineJoin="round"
+      android:strokeWidth="1.5"
+      android:fillColor="#00000000"
+      android:strokeColor="#7C7474"
+      android:strokeLineCap="round"/>
+  <path
+      android:pathData="M14.83,14.83L9.17,9.17"
       android:strokeLineJoin="round"
       android:strokeWidth="1.5"
       android:fillColor="#00000000"
