--- a/app/src/main/res/layout/activity_order_detail.xml
+++ b/app/src/main/res/layout/activity_order_detail.xml
@@ -42,7 +42,7 @@
             android:gravity="center"
             android:maxLines="1"
             android:textColor="@color/white"
-            tools:text="Order Details" />
+            android:text="Order Details" />
 
     </FrameLayout>
 
