--- a/app/src/main/res/layout/activity_prepare_shipment.xml
+++ b/app/src/main/res/layout/activity_prepare_shipment.xml
@@ -41,7 +41,7 @@
             android:gravity="center"
             android:maxLines="1"
             android:textColor="@color/white"
-            tools:text="@string/prepare_shipment" />
+            android:text="@string/prepare_shipment" />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -52,6 +52,7 @@
         android:orientation="horizontal">
 
         <RadioButton
+            android:id="@+id/orderButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
@@ -66,6 +67,7 @@
             android:textStyle="bold" />
 
         <RadioButton
+            android:id="@+id/customerButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
@@ -80,6 +82,7 @@
             android:textStyle="bold" />
 
         <RadioButton
+            android:id="@+id/carrierButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
