--- a/app/src/main/res/layout/activity_tag_finder.xml
+++ b/app/src/main/res/layout/activity_tag_finder.xml
@@ -40,7 +40,7 @@
             android:gravity="center"
             android:maxLines="1"
             android:textColor="@color/white"
-            android:text="Scan Item" />
+            android:text="Tag Finder" />
 
     </FrameLayout>
 
