--- a/app/src/main/res/layout/toolbar_layout.xml
+++ b/app/src/main/res/layout/toolbar_layout.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="@dimen/_50sdp"
-    android:background="@color/app_bg"
+    android:background="@color/colorPrimary"
     android:orientation="horizontal">
 
     <ImageView
@@ -14,7 +14,7 @@
         android:layout_marginStart="@dimen/_6sdp"
         android:padding="@dimen/_10sdp"
         android:src="@drawable/ic_back"
-        app:tint="@color/black" />
+        app:tint="@color/white" />
 
     <TextView
         android:id="@+id/toolbarTitle"
@@ -23,7 +23,7 @@
         android:layout_gravity="center"
         android:fontFamily="@font/inter_bold"
         android:text="@string/app_name"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="@dimen/_16ssp" />
 
     <ImageView
